--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
         "farg",
         "filegrid",
         "fillcolor",
+        "gettime",
         "gridwidth",
         "hoverinfo",
         "hoveron",
